<resources>
    <string name="app_name">Ioasys_test</string>

    <!--    Login Screen strings-->
    <string name="login_welcome_label">Bem-vindo ao Empresas</string>
    <string name="login_lorem_ipsum_label">Lorem ipsum dolor sit amet, contetur adipiscing elit. Nunc accumsan.</string>
    <string name="login_enter_label">Entrar</string>
    <string name="login_email_label">E-mail</string>
    <string name="login_password_label">Senha</string>
    <string name="login_invalid_credentials">Credenciais informadas são inválidas, tente novamente.</string>


    <!--    Home Screen strings-->
    <string name="home_search_label">Pesquisar</string>
    <string name="home_search_instruction_label">Clique na busca para iniciar.</string>

</resources>